--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                     Inclusion in the Public Sector</a>
                                 <a class="dropdown-item"
                                     href="https://learn-apprendre.ca/course/view.php?id=127">Building a more
-                                    Resprectful and Inclusive Workplace</a>
+                                    Respectful and Inclusive Workplace</a>
                                 <a class="dropdown-item"
                                     href="https://learn-apprendre.ca/course/view.php?id=285">Outcomes from the
                                     Consultation Jam on Inclusion</a>
