#2 Content should be good

--- a/index.html
+++ b/index.html
@@ -262,11 +262,12 @@
                         access the Transcript</a></p>
             </section>
         </div>
-        <hr class="proper-hr">
+        <hr class="custom-hr long-hr">
         <!-- cards -->
         <section class="courseCards riw-course-cards">
             <div class="container-fluid">
-                <h3 class="events">Upcoming Events</h3>
+                <h3 class="titles-sm">Upcoming Events</h3>
+                <!-- <h3 class="events">Upcoming Events</h3> -->
                 <div class="card-deck riw-card-deck">
                     <!-- CARD 1 -->
                     <div class="card">
@@ -337,18 +338,18 @@
                     <div class="w-100 d-none d-lg-block"></div>
                 </div>
             </div>
-            <hr>
+            <hr class="long-hr">
             <!-- Footer -->
             <footer class="riw-footer">
                 <!-- New footer -->
                 <div class="container">
                     <div class="row">
-                        <div class="col more-resources">
+                        <div class="col titles-sm">
                             <h3>More Resources</h3>
                         </div>
                     </div>
                     <div class="riw-footer-shift">
-                        <div class="row">
+                        <div class="row riw-footer-row">
                             <div class="col riw-footer-col">
                                 <a href="https://idp.csps-efpc.gc.ca/idp/login-en.jsp" class="gc-campus"
                                     target="_blank"><img
@@ -375,18 +376,18 @@
                                     <p>CSPS Website</p>
                                 </a>
                             </div>
-                            <div>
-                            </div>
+
                         </div>
-                        <p class="contact-us">If you have any questions of comments about our products, <a
+                        <p class="contact-us riw-footer-row">If you have any questions of comments about our products,
+                            <a
                                 href="mailto:respectfulandinclusiveworkplaces-milieuxdetravailrespectueuxetin@canada.ca?subject=Questions Regarding the Respectful and Inclusive Workplace Products">please
                                 send us an email.</a></p>
-                        <hr class="thick">
                     </div>
                 </div>
             </footer>
         </section>
     </div>
+    <hr class="long-hr">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
