Add tabindex 0 to carousel text for accessibility

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <a href="https://learn-apprendre.ca/course/view.php?id=247"><img
                             src="https://user-images.githubusercontent.com/76488409/113184921-c6197580-9223-11eb-80f9-85c844ffefa6.jpg"
                             class="d-block w-100" alt="Unconscious Bias Teady-to-Use Workshop Banner"></a>
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block" tabindex="0">
                         <h5>Unconscious Bias Ready-to-Use Workshop</h5>
                         <p>This workshop allows for in-depth discussions on the topic of unconscious bias within a group
                             of employees who share the same context—usually people from the same department or who
@@ -57,7 +57,7 @@
                     <a href="https://learn-apprendre.ca/course/view.php?id=282"><img
                             src="https://github.com/antoinebedward/openlearning/blob/CSPS_Open_Learning/Business_Lines/RIW/Images/You%20Are%20Not%20Alone%20video.jpg?raw=true"
                             class="d-block w-100" alt="You Are Not Alone Banner"></a>
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block" tabindex="0">
                         <h5>A Guide to Leading Conversations on Systemic Racism and Racial Discrimination</h5>
                         <p>The purpose of this learning tool is to support managers in having conversations about
                             systemic racism and racial discrimination with their employees. <br><span
@@ -70,7 +70,7 @@
                     <a href="https://learn-apprendre.ca/mod/url/view.php?id=162"><img
                             src="https://user-images.githubusercontent.com/76488409/114087649-22167680-9882-11eb-856c-03fd1ea707bd.png"
                             class="d-block w-100" alt="Mental Health Job Aids for Managers Banner"></a>
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-none d-md-block" tabindex="0">
                         <h5>Mental Health Job Aids For Managers</h5>
                         <p>13 Mental Health Job Aids for Managers that will assist them in addressing psychosocial risks
                             and create a psychologically healthy workplace for their employees.<br><span
