--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <!-- New footer -->
                 <div class="container">
                     <div class="row">
-                        <div class="col titles-sm">
+                        <div class="col titles-sm resources">
                             <h3>More Resources</h3>
                         </div>
                     </div>
