--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         <!-- cards -->
         <section class="courseCards riw-course-cards">
             <div class="container-fluid">
-                <h3 class="titles-sm">Upcoming Events</h3>
+                <h3>Upcoming Events</h3>
                 <div class="card-deck riw-card-deck">
                     <!-- CARD 1 -->
                     <div class="card riw-card">
@@ -350,7 +350,7 @@
                 <!-- New footer -->
                 <div class="container">
                     <div class="row">
-                        <div class="col titles-sm resources">
+                        <div class="col">
                             <h3>More Resources</h3>
                         </div>
                     </div>
