Add class to h3

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         target="_blank"><img
                             src="https://user-images.githubusercontent.com/76488409/117684729-42886800-b183-11eb-80b1-2d672233d54b.png"
                             alt="Illustrative Banner for the RIW Placemat" class="placemat-img"></a>
-                    <h3>Overview of Training in Support of Respectful and Inclusive Workplaces</h3>
+                    <h3 class="h3">Overview of Training in Support of Respectful and Inclusive Workplaces</h3>
                     <p>This is a comprehensive list of learning products offered by the Respectful and Inclusive
                         Workplaces
                         business line at the Canada School of Public Service. Please note that many of these products
@@ -255,7 +255,7 @@
                             src="https://learn-apprendre.ca/pluginfile.php/2851/course/section/1009/CSPS_20200923_EN%20Small.jpg"
                             alt="Tapestry: A word document containing the narrative of the tapestry is available for download for assistive technology users."
                             class="placemat-img"></a>
-                    <h3 class="tapestry-paragraph">Visual Tapestry on Inclusion</h3>
+                    <h3 class="tapestry-paragraph h3">Visual Tapestry on Inclusion</h3>
                     <p class="tapestry-paragraph">An artist transposed the participants’ words into a piece of visual
                         art: a
                         tapestry measuring four feet
@@ -280,7 +280,7 @@
             <!-- cards -->
             <section class="courseCards riw-course-cards">
                 <div class="container-fluid">
-                    <h3 class="titles-sm">Upcoming Events</h3>
+                    <h3 class="titles-sm h3">Upcoming Events</h3>
                     <div class="card-deck riw-card-deck">
                         <!-- CARD 1 -->
                         <div class="card riw-card">
@@ -373,7 +373,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h3 class="titles-sm">More Resources</h3>
+                                <h3 class="titles-sm h3">More Resources</h3>
                             </div>
                         </div>
                         <div class="riw-footer-shift">
