--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                                     Accessibility
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=286">Workplace
                                         Accommodation Consultation Series</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=50">View All
                                         Content</a>
                                 </div>
@@ -134,17 +134,17 @@
                                     Diversity and Inclusion
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=317">Disability
                                         Inclusion in the Public Sector</a>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=127">Building a more
                                         Respectful and Inclusive Workplace</a>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=285">Outcomes from the
                                         Consultation Jam on Inclusion</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=52">View All
                                         Content</a>
                                 </div>
@@ -159,11 +159,11 @@
                                     GBA+
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/mod/url/view.php?id=54">Introduction to
                                         GBA+</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=40">View All
                                         Content</a>
                                 </div>
@@ -176,7 +176,7 @@
                                     Unconscious Bias
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=247">Ready-to-Use
                                         Workshop</a>
                                 </div>
@@ -191,18 +191,18 @@
                                     Mental Health
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=258">Conducting
                                         an
                                         Organizational Review</a>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=129">The
                                         Working Mind -
                                         Crisis Response Virtual Training</a>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=47">Videos</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=38">View All
                                         Content</a>
                                 </div>
@@ -215,15 +215,16 @@
                                     Systemic Racism and Racial Discrimination
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/view.php?id=146">Tools,
                                         Training
                                         and Resources to Combat Racism & Discrimination</a>
-                                    <a class="dropdown-item" href="https://learn-apprendre.ca/course/view.php?id=282">A
+                                    <a class="dropdown-item riw-dropdown-item"
+                                        href="https://learn-apprendre.ca/course/view.php?id=282">A
                                         Guide To Leading
                                         Converstations on Systemic Racism and Racial Discrimination</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item"
+                                    <a class="dropdown-item riw-dropdown-item"
                                         href="https://learn-apprendre.ca/course/index.php?categoryid=57">View All
                                         Content</a>
                                 </div>
