Working moodle styles

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <!-- our products dropdowns -->
             <main class="product-list">
                 <!-- Bootstrap grid -->
-                <div class="container">
+                <div class="container riw-product-container">
                     <div class="row">
                         <div class="col product-list">
                             <h2 class="product-content">Featured Products</h2>
@@ -279,92 +279,108 @@
             </div>
             <hr class="custom-hr long-hr">
             <!-- cards -->
+            <!-- container fluid-->
             <section class="courseCards riw-course-cards">
-                <div class="container-fluid">
-                    <h3 class="titles-sm h3">Upcoming Events</h3>
-                    <div class="card-deck riw-card-deck">
-                        <!-- CARD 1 -->
-                        <div class="card riw-card">
-                            <a href="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/europe-today-eng.aspx"
-                                target="_blank"><img class="card-img-top"
-                                    src="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/images/lp-eng.png"
-                                    alt="Illustrative Banner for the CSS Virtual Café series: Europe Today event"></a>
-                            <h5 class="card-header riw-card-header">CSPS Virtual Café Series: Europe Today
-                            </h5>
-                            <div class="card-body riw-card-body">
-                                <div class="card-time riw-card-time">
-                                    <p> June 10, 2021 | 11:00 am to 12:00 pm (ET)</p>
-                                </div>
-                                <p class="card-description riw-card-description">The world is changing at an accelerated
-                                    rate and the European
-                                    Union (EU) is no exception. The challenges of Brexit, as well as vaccine nationalism
-                                    from some quarters, are testing long-standing social and political relationships
-                                    across
-                                    the continent.</p>
-                                <p class="card-description riw-card-description">Moreover, the possibility of waning
-                                    power
-                                    in Brussels may impact
-                                    Europe's ability to influence trade and military decisions around the globe.
-                                    <a href="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/europe-today-eng.aspx"
-                                        target="_blank" class="event-link">Register here</a>
-                                </p>
-                            </div>
+                <div class="container container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <h3 class="product-content">Upcoming Events</h3>
                         </div>
-                        <!-- CARD 2 -->
-                        <div class="card riw-card">
-                            <a href="https://www.csps-efpc.gc.ca/events/career-development/index-eng.aspx"
-                                target="_blank"><img class="card-img-top"
-                                    src="https://user-images.githubusercontent.com/76488409/120825235-2b8d2980-c527-11eb-9ada-5328e4841753.png"
-                                    alt="Illustrative Banner for the Career Development and Skill Building for Tomorrow. Image to come."></a>
-                            <h5 class="card-header riw-card-header">Career Development and Skill Building for Tomorrow
-                            </h5>
-                            <div class="card-body riw-card-body">
-                                <div class="card-time riw-card-time">
-                                    <p>June 14, 2021 | 1:00 pm to 2:00 pm (ET)</p>
+                    </div>
+                    <div class="row">
+                        <div class="card-deck riw-card-deck">
+                            <!-- CARD 1 -->
+                            <div class="card riw-card">
+                                <a href="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/europe-today-eng.aspx"
+                                    target="_blank"><img class="card-img-top"
+                                        src="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/images/lp-eng.png"
+                                        alt="Illustrative Banner for the CSS Virtual Café series: Europe Today event"></a>
+                                <h5 class="card-header riw-card-header">CSPS Virtual Café Series: Europe Today
+                                </h5>
+                                <div class="card-body riw-card-body">
+                                    <div class="card-time riw-card-time">
+                                        <p> June 10, 2021 | 11:00 am to 12:00 pm (ET)</p>
+                                    </div>
+                                    <p class="card-description riw-card-description">The world is changing at an
+                                        accelerated
+                                        rate and the European
+                                        Union (EU) is no exception. The challenges of Brexit, as well as vaccine
+                                        nationalism
+                                        from some quarters, are testing long-standing social and political relationships
+                                        across
+                                        the continent.</p>
+                                    <p class="card-description riw-card-description">Moreover, the possibility of waning
+                                        power
+                                        in Brussels may impact
+                                        Europe's ability to influence trade and military decisions around the globe.
+                                        <a href="https://www.csps-efpc.gc.ca/events/virtual-cafe-series/europe-today-eng.aspx"
+                                            target="_blank" class="event-link">Register here</a>
+                                    </p>
                                 </div>
-                                <p class="card-description riw-card-description">A large portion of the public service
-                                    has
-                                    been working from home
-                                    for over a year now. Meanwhile, new recruits have joined the ranks, working
-                                    virtually
-                                    and with little interaction beyond their immediate teams, supervisors and managers.
-                                </p>
-                                <p class="card-description riw-card-description">Many public servants are beginning to
-                                    wonder how they can
-                                    continue to build their careers and be noticed for opportunities in the current work
-                                    environment.<a
-                                        href="https://www.csps-efpc.gc.ca/events/career-development/index-eng.aspx"
-                                        target="_blank" class="event-link">Register here</a></p>
                             </div>
-                        </div>
-                        <!-- CARD 3 -->
-                        <div class="card riw-card">
-                            <a href="https://www.csps-efpc.gc.ca/events/workplace-accommodation/accessible-procurement-eng.aspx"
-                                target="_blank"><img class="card-img-top"
-                                    src="https://www.csps-efpc.gc.ca/events/workplace-accommodation/images/lp-eng.png"
-                                    alt="Illustrative Banner for the Accessible Procurement Event"></a>
-                            <h5 class="card-header riw-card-header">Workplace Accommodation Consultation Series:
-                                Accessible
-                                Procurement</h5>
-                            <div class="card-body riw-card-body">
-                                <div class="card-time riw-card-time">
-                                    <p>June 15, 2021 | 1:30 pm to 3:00 pm (ET)</p>
+                            <!-- CARD 2 -->
+                            <div class="card riw-card">
+                                <a href="https://www.csps-efpc.gc.ca/events/career-development/index-eng.aspx"
+                                    target="_blank"><img class="card-img-top"
+                                        src="https://user-images.githubusercontent.com/76488409/120825235-2b8d2980-c527-11eb-9ada-5328e4841753.png"
+                                        alt="Illustrative Banner for the Career Development and Skill Building for Tomorrow. Image to come."></a>
+                                <h5 class="card-header riw-card-header">Career Development and Skill Building for
+                                    Tomorrow
+                                </h5>
+                                <div class="card-body riw-card-body">
+                                    <div class="card-time riw-card-time">
+                                        <p>June 14, 2021 | 1:00 pm to 2:00 pm (ET)</p>
+                                    </div>
+                                    <p class="card-description riw-card-description">A large portion of the public
+                                        service
+                                        has
+                                        been working from home
+                                        for over a year now. Meanwhile, new recruits have joined the ranks, working
+                                        virtually
+                                        and with little interaction beyond their immediate teams, supervisors and
+                                        managers.
+                                    </p>
+                                    <p class="card-description riw-card-description">Many public servants are beginning
+                                        to
+                                        wonder how they can
+                                        continue to build their careers and be noticed for opportunities in the current
+                                        work
+                                        environment.<a
+                                            href="https://www.csps-efpc.gc.ca/events/career-development/index-eng.aspx"
+                                            target="_blank" class="event-link">Register here</a></p>
                                 </div>
-                                <p class="card-description riw-card-description">Have you ever wondered how you can help
-                                    remove barriers for
-                                    persons with disabilities by procuring goods and services that are accessible and
-                                    inclusive to everyone?</p>
-                                <p class="card-description riw-card-description">The third event in the Workplace
-                                    Accommodation Consultation
-                                    Series covers contracting policy requirements, as well as the roles and
-                                    responsibilities
-                                    of buyers and clients regarding accessible procurement.
-                                    <a href="https://www.csps-efpc.gc.ca/events/workplace-accommodation/accessible-procurement-eng.aspx"
-                                        target="_blank" class="event-link">Register here</a>
-                                </p>
                             </div>
+                            <!-- CARD 3 -->
+                            <div class="card riw-card">
+                                <a href="https://www.csps-efpc.gc.ca/events/workplace-accommodation/accessible-procurement-eng.aspx"
+                                    target="_blank"><img class="card-img-top"
+                                        src="https://www.csps-efpc.gc.ca/events/workplace-accommodation/images/lp-eng.png"
+                                        alt="Illustrative Banner for the Accessible Procurement Event"></a>
+                                <h5 class="card-header riw-card-header">Workplace Accommodation Consultation Series:
+                                    Accessible
+                                    Procurement</h5>
+                                <div class="card-body riw-card-body">
+                                    <div class="card-time riw-card-time">
+                                        <p>June 15, 2021 | 1:30 pm to 3:00 pm (ET)</p>
+                                    </div>
+                                    <p class="card-description riw-card-description">Have you ever wondered how you can
+                                        help
+                                        remove barriers for
+                                        persons with disabilities by procuring goods and services that are accessible
+                                        and
+                                        inclusive to everyone?</p>
+                                    <p class="card-description riw-card-description">The third event in the Workplace
+                                        Accommodation Consultation
+                                        Series covers contracting policy requirements, as well as the roles and
+                                        responsibilities
+                                        of buyers and clients regarding accessible procurement.
+                                        <a href="https://www.csps-efpc.gc.ca/events/workplace-accommodation/accessible-procurement-eng.aspx"
+                                            target="_blank" class="event-link">Register here</a>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="w-100 d-none d-lg-block"></div>
                         </div>
-                        <div class="w-100 d-none d-lg-block"></div>
                     </div>
                 </div>
                 <hr class="long-hr">
@@ -374,7 +390,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col">
-                                <h3 class="titles-sm h3">More Resources</h3>
+                                <h3 class="product-content">More Resources</h3>
                             </div>
                         </div>
                         <div class="riw-footer-shift">
