--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
                             access the Transcript</a></p>
                 </section>
             </div>
-            <hr class="custom-hr long-hr">
             <!-- cards -->
             <!-- container fluid-->
             <section class="courseCards riw-course-cards">
+                <hr class="events-hr">
                 <div class="container container-fluid">
                     <div class="row">
                         <div class="col">
@@ -383,7 +383,7 @@
                         </div>
                     </div>
                 </div>
-                <hr class="long-hr">
+                <hr>
                 <!-- Footer -->
                 <footer class="riw-footer">
                     <!-- New footer -->
@@ -433,7 +433,7 @@
                 </footer>
             </section>
         </div>
-        <hr class="long-hr">
+
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
